styles.css
:root {
  --font: Helvetica, Arial, sans-serif;
  --shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.25);
  --border-radius: 8px;
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  font-family: var(--font);
}

button {
  font-family: var(--font);
  font-size: 24px;
  font-weight: bold;
}

.container {
  display: flex;
  align-items: center;
  justify-content: center;
  min-height: 100vh;
  padding: 32px 16px;
}

.calculator {
  background-color: #d4d4d4;
  border-radius: var(--border-radius);
  box-shadow: var(--shadow);
  padding: 16px;
}

.screen {
  text-align: right;
  background: linear-gradient(#f5f5cb, #d8deaa, #f5f5cb);
  border-radius: var(--border-radius);
  box-shadow: var(--shadow);
  font-size: 36px;
  padding: 8px;
}

